more sensible naming and add feature is underway

--- a/templates/Index.html
+++ b/templates/Index.html
@@ -34,7 +34,7 @@
                 </th>
             </tr>
             <!-- Vittaus model luokkaan sqlserverconn jonka objektit loopataan -->
-            {% for data in sqlserverconn %}
+            {% for data in persons %}
             <tr>
                 <td>{{data.firstname}}</td>
                 <td>{{data.lastname}}</td>
