--- a/templates/AddNew.html
+++ b/templates/AddNew.html
@@ -45,7 +45,7 @@
 
             </table>
             <hr />
-            <input type="submit" value="Insert" onclick="return alert('New contact added!')" />
+            <input type="submit" value="insert" onclick="return alert('New contact added!')" />
         </form>
 
     </center>
